--- a/resources/public/index.css
+++ b/resources/public/index.css
@@ -171,6 +171,8 @@ label[for='toggle-all'] {
 	display: none;
 }
 
+
+
 .todo-list li .toggle {
 	text-align: center;
 	width: 40px;
@@ -180,17 +182,29 @@ label[for='toggle-all'] {
 	top: 0;
 	bottom: 0;
 	margin: auto 0;
-	border: none; /* Mobile Safari */
-	-webkit-appearance: none;
+	border: solid 1px black;
+	border-radius: 3px;
+	-webkit-appearance: none; 
 	appearance: none;
+	background-color: #ddd;
 }
 
-.todo-list li .toggle:after {
-	content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#ededed" stroke-width="3"/></svg>');
+
+.todo-list li .toggle:hover {
+	background-color: #ccc;
+	appearance: default;
 }
+
+
+
+/* .todo-list li .toggle:checked:after {
+	content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#bddad5" stroke-width="3"/><path fill="#5dc2af" d="M72 25L42 71 27 56l-4 4 20 20 34-52z"/></svg>');
+} */
 
 .todo-list li .toggle:checked:after {
-	content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#bddad5" stroke-width="3"/><path fill="#5dc2af" d="M72 25L42 71 27 56l-4 4 20 20 34-52z"/></svg>');
+	display: default;
+	content: "\2713";
+	font-size: x-large;
 }
 
 .todo-list li label {
